--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,5 +9,5 @@ external:
   api:
     baseUrl: https://xenia-qa.incubatelabs.com
     contentfulUrl: https://cdn.contentful.com/spaces/81nl0iyxht1e/environments/master/entries
-    accessToken: 3NrvE0u_wpizKe-ekAPEr0-CL4tKe9g6X_S6GRrJIDw
+    accessToken: 
 
